<resources>
    <string name="app_name">Stronger</string>
    <string name="action_settings">Settings</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="delete">Delete</string>

	<string name="workout_stats">Statistics</string>
	<!-- Workouts -->
	<string name="workout_list">Workout History</string>
	<string name="start_blank_workout">Start Blank Workout</string>
	<string name="workout_details">Workout</string>
	<string name="workout_template_list">Workout Templates</string>
	<string name="workout_template_details">Workout Template</string>
	<!-- Base Exercises -->
    <string name="base_exercise_list">Exercises</string>
    <string name="create_exercise">Create Exercise</string>
	<string name="base_exercise_details">Exercise</string>
</resources>
